--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,34 @@ xmltodict==0.13.0
 # Visualization & Analysis
 matplotlib==3.8.2
 seaborn==0.13.0
+plotly==5.17.0
 
 # Camera & Device Access
 pygame==2.5.2
 
-# Utility
+# Web Framework & Real-time Communication
+Flask==3.0.0
+Flask-SocketIO==5.3.6
+eventlet==0.33.3
+
+# Machine Learning & Optimization
+scikit-learn==1.3.2
+xgboost==2.0.1
+lightgbm==4.1.0
+optuna==3.4.0
+mlflow==2.8.1
+
+# Segmentation Models
+segmentation-models-pytorch==0.3.3
+
+# Web Scraping & Data Collection
+requests==2.31.0
+beautifulsoup4==4.12.2
+selenium==4.15.2
+
+# Utility & Processing
 pyyaml==6.0.1
 scipy==1.11.4
+python-dateutil==2.8.2
+Werkzeug==3.0.1
+psutil==5.9.6
